...
    <string name="menu_monitoring_map_hybrid">"Hybrid"</string>
    <string name="menu_monitoring_map_provider">"Map from:"</string>
    <string name="menu_monitoring_map_provider_google">"Google"</string>
    <string name="menu_monitoring_map_provider_osm">"OSM"</string>
    <string name="menu_monitoring_stay_awake">"Always on"</string>
    <string name="menu_monitoring_show_zone_background">"Polygons background"</string>
    <string name="menu_monitoring_start">"Start"</string>
    <string name="menu_monitoring_save">"Save"</string>
    <string name="main_screen_btn_start">"Start"</string>
    <string name="main_screen_btn_upload">"Upload to smartbirds.org"</string>
    <string name="monitoring_birds_notes">"Remarks"</string>
    <string name="monitoring_common_source">"Project"</string>
    <string name="monitoring_common_start_date">"Beginning:"</string>
...
    <string name="monitoring_ciconia_sep_5">"5."</string>
    <string name="monitoring_ciconia_sep_6">"6. Data for dead juveniles"</string>
    <string name="export_description">"Export all data not yet uploaded to the server (all data is still kept on the device)"</string>
    <string name="image_file_create_error">"Cannot create photo"</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">"Sign in"</string>
    <string name="prompt_email">"Email"</string>
    <string name="prompt_password">"Password"</string>
    <string name="action_sign_in">"Sign in"</string>
    <string name="action_sign_in_short">"Sign in"</string>
    <string name="action_register">"Register"</string>
    <string name="error_invalid_email">"This email address is invalid"</string>
...
