...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_screen_btn_upload"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/center_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_birds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                android:text="@string/main_screen_btn_start"
                android:textColor="@android:color/white" />
...
