<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_submit"
        android:title="Submit"
        android:orderInCategory="100"
        android:showAsAction="always" />

</menu>