...
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <org.bspb.smartbirds.pro.ui.views.SingleChoiceFormInput
                android:id="@+id/form_common_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monitoring_common_source"
                android:tag="@string/tag_source"
                app:entriesType="form_main_source"
                app:required="false" />
...
